--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -47,4 +47,10 @@
     strong {
         @apply font-semibold;
     }
+
+    a {
+        &:not(.plain-link) {
+            @apply text-blue-500 hover:text-blue-400 hover:underline;
+        }
+    }
 }
