--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -50,7 +50,7 @@
 
     a {
         &:not(.plain-link) {
-            @apply text-blue-500 hover:text-blue-400 hover:underline;
+            @apply text-blue-500 no-underline hover:text-blue-400 hover:underline;
         }
     }
 }
