--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -40,7 +40,7 @@
     }
 
     body {
-        @apply bg-grey-900 text-white;
+        @apply bg-white text-grey-900 dark:bg-grey-900 dark:text-white;
         @apply selection:bg-blue-500 selection:text-white;
     }
 
@@ -50,7 +50,7 @@
 
     a {
         &:not(.plain-link) {
-            @apply text-blue-500 no-underline hover:text-blue-400 hover:underline;
+            @apply text-blue-600 no-underline hover:text-blue-700 hover:underline dark:text-blue-500 dark:hover:text-blue-400;
         }
     }
 }
