--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -50,7 +50,7 @@
 
     a {
         &:not(.plain-link) {
-            @apply text-blue-600 no-underline hover:text-blue-700 hover:underline dark:text-blue-500 dark:hover:text-blue-400;
+            @apply text-red-500 no-underline hover:text-red-600 hover:underline dark:hover:text-red-400;
         }
     }
 }
